--- a/TravelPackage/TravelPackage/TravelPackage.csproj
+++ b/TravelPackage/TravelPackage/TravelPackage.csproj
@@ -399,13 +399,22 @@
     <Content Include="Images\Destinations\Camiguin\CamiguinTourPackageDefault.jpg" />
     <Content Include="Images\icons\automation.png" />
     <Content Include="Images\icons\chat.png" />
+    <Content Include="Images\icons\chat2.png" />
+    <Content Include="Images\icons\code.png" />
+    <Content Include="Images\icons\gear.png" />
+    <Content Include="Images\icons\html.png" />
     <Content Include="Images\icons\software.png" />
     <Content Include="Images\icons\web.png" />
     <Content Include="Images\misc\aboutus.png" />
+    <Content Include="Images\misc\airplane.png" />
     <Content Include="Images\misc\AJCarRental.png" />
     <Content Include="Images\misc\arduino.jpg" />
+    <Content Include="Images\misc\car.png" />
+    <Content Include="Images\misc\car2.png" />
+    <Content Include="Images\misc\coins.png" />
     <Content Include="Images\misc\icons_about.png" />
     <Content Include="Images\misc\internet.png" />
+    <Content Include="Images\misc\job.png" />
     <Content Include="Images\misc\lab.png" />
     <Content Include="Images\misc\laboratory.png" />
     <Content Include="Images\misc\laptop.jpg" />
